Play mail sender upgraded.

--- a/conf/core/mail.conf
+++ b/conf/core/mail.conf
@@ -1,13 +1,15 @@
 # DO NOT EDIT/UPDATE IN PRODUCTION BUT USE custom.conf TO OVERRIDE!
 
 play.mailer {
-  host="smtp-1.uni.lu"
-  port=587
-  ssl=false
-  tls=false
-  user=""
-  systemmail="ada.reporting.system@uni.lu"
-  password=""
-  debug=true
-  mock=true
+  host = ${?ADA_MAIL_HOST}
+  port = ${?ADA_MAIL_PORT}
+  user = ${?ADA_MAIL_USER}
+  password = ${?ADA_MAIL_PASSWORD}
+//  ssl = no
+//  tls = no
+//  tlsRequired = no
+//  debug = no
+//  timeout = null
+//  connectiontimeout = null
+//  mock = no
 }
