Configuration introduced such that it's self-runnable. Generic mapping extended. Server updated.

--- a/conf/core/data-access.conf
+++ b/conf/core/data-access.conf
@@ -28,17 +28,11 @@ mongodb.connection.strictUri=true
 // Elastic Search //
 ////////////////////
 
+// default values
 elastic.uri = "127.0.0.1:9300"
-// elastic.uri = ${?ADA_ELASTIC_DB_HOST}
-
 elastic.cluster.name = "elasticsearch"
-// elastic.cluster.name = ${?ADA_ELASTIC_DB_CLUSTER_NAME}
-
 elastic.threadpool.index.size = 30
-// elastic.threadpool.index.size = ${?ADA_ELASTIC_THREADPOOL_INDEX_SIZE}
-
 elastic.threadpool.bulk.size = 10
-// elastic.threadpool.bulk.size = ${?ADA_ELASTIC_THREADPOOL_BULK_SIZE}
 
 elastic {
   uri: ${?ADA_ELASTIC_DB_HOST}
@@ -50,5 +44,6 @@ elastic {
   threadpool.index.queue_size: 10000
   threadpool.bulk.size: ${?ADA_ELASTIC_THREADPOOL_BULK_SIZE} //${elasticdb.threadpool.bulk.size}
   threadpool.bulk.queue_size: 1000
-  scroll.batch.size: 50000
+  scroll.batch.size: 200
+  scroll.doc_sort.use: false
 }
