Migration script added.

--- a/conf/core/data-access.conf
+++ b/conf/core/data-access.conf
@@ -44,6 +44,6 @@ elastic {
   threadpool.index.queue_size: 10000
   threadpool.bulk.size: ${?ADA_ELASTIC_THREADPOOL_BULK_SIZE} //${elasticdb.threadpool.bulk.size}
   threadpool.bulk.queue_size: 1000
-  scroll.batch.size: 200
-  scroll.doc_sort.use: false
+  scroll.batch.size: 10000
+  scroll.doc_sort.use: true
 }
