User management documentation added. Closes #3

--- a/conf/custom.conf
+++ b/conf/custom.conf
@@ -20,6 +20,8 @@ footer.logos = [
 
 ldap {
   mode = "local"
+  host = "localhost"
+  bindDN = "cn=admin.user,cn=users,cn=accounts,dc=ada"
   port = "65505"
   debugusers = true
 }
