--- a/conf/application.conf
+++ b/conf/application.conf
@@ -11,7 +11,7 @@
 # See http://www.playframework.com/documentation/latest/ApplicationSecret for more details.
 play.crypto.secret="9Bjt]9lSqPnfXPd5e;ign/wgsm[]R;`uGP<frI5^rhvJR:ZbJC_hr`Si=cMwutA2"
 
-app.version = 0.7.3.RC.10.SNAPSHOT.1
+app.version = 0.7.3
 
 # The application languages
 # ~~~~~
@@ -66,6 +66,8 @@ play.server.netty {
 }
 
 ignite.conf.path = "conf/core/ignite-cache.xml"
+
+play.http.router = "core.Routes"
 
 # Data access
 include "core/data-access.conf"
