--- a/conf/core/spark-ml.conf
+++ b/conf/core/spark-ml.conf
@@ -7,6 +7,7 @@
 ml.repetition_parallelism = 3
 ml.binary_classifier.input = "probability" // "rawPrediction"
 ml.dl_use_consecutive_order_transformers = false
+ml.debug_mode = false
 
 spark.master.url = "local[*]"
 spark.executor.memory = "4g"
