--- a/conf/application.conf
+++ b/conf/application.conf
@@ -11,7 +11,7 @@
 # See http://www.playframework.com/documentation/latest/ApplicationSecret for more details.
 play.crypto.secret="9Bjt]9lSqPnfXPd5e;ign/wgsm[]R;`uGP<frI5^rhvJR:ZbJC_hr`Si=cMwutA2"
 
-app.version = 0.7.3
+app.version = 0.8.0.RC.1
 
 # The application languages
 # ~~~~~
