--- a/conf/core/data-access.conf
+++ b/conf/core/data-access.conf
@@ -24,12 +24,13 @@ mongodb.uri = ${?ADA_MONGO_DB_URI}
 
 mongodb.connection.strictUri=true
 
+
 ////////////////////
 // Elastic Search //
 ////////////////////
 
 // default values
-elastic.uri = "127.0.0.1:9300"
+elastic.uri = "127.0.0.1:9200" // "127.0.0.1:9300"
 elastic.cluster.name = "elasticsearch"
 elastic.threadpool.index.size = 30
 elastic.threadpool.bulk.size = 10
@@ -40,10 +41,11 @@ elastic {
   type: "transport"
   client.transport.sniff: true
   client.transport.ping_timeout: 80s
-  threadpool.index.size: ${?ADA_ELASTIC_THREADPOOL_INDEX_SIZE} //${elasticdb.threadpool.index.size}
-  threadpool.index.queue_size: 10000
-  threadpool.bulk.size: ${?ADA_ELASTIC_THREADPOOL_BULK_SIZE} //${elasticdb.threadpool.bulk.size}
-  threadpool.bulk.queue_size: 1000
+  thread_pool.index.size: ${?ADA_ELASTIC_THREADPOOL_INDEX_SIZE} //${elasticdb.threadpool.index.size}
+  thread_pool.index.queue_size: 10000
+  thread_pool.bulk.size: ${?ADA_ELASTIC_THREADPOOL_BULK_SIZE} //${elasticdb.threadpool.bulk.size}
+  thread_pool.bulk.queue_size: 1000
   scroll.batch.size: 10000
   scroll.doc_sort.use: true
+  text.analyzer: "standard"
 }
