Runnables: support for a file output. Closes #26

--- a/conf/core/data-access.conf
+++ b/conf/core/data-access.conf
@@ -30,7 +30,7 @@ mongodb.connection.strictUri=true
 ////////////////////
 
 // default values
-elastic.uri = "127.0.0.1:9200" // "127.0.0.1:9300"
+elastic.uri = "127.0.0.1:9300" // "10.240.6.122:9200" // "127.0.0.1:9200" //
 elastic.cluster.name = "elasticsearch"
 elastic.threadpool.index.size = 30
 elastic.threadpool.bulk.size = 10
