Mongo migration script 0.8.0 added.

--- a/conf/core/data-access.conf
+++ b/conf/core/data-access.conf
@@ -30,9 +30,9 @@ mongodb.connection.strictUri=true
 ////////////////////
 
 // default values
-elastic.uri = "127.0.0.1:9300" // "10.240.6.122:9200" // "127.0.0.1:9200" //
+elastic.uri = "127.0.0.1:9200"
 elastic.cluster.name = "elasticsearch"
-elastic.threadpool.index.size = 30
+elastic.threadpool.index.size = 10
 elastic.threadpool.bulk.size = 10
 
 elastic {
@@ -41,11 +41,12 @@ elastic {
   type: "transport"
   client.transport.sniff: true
   client.transport.ping_timeout: 80s
-  thread_pool.index.size: ${?ADA_ELASTIC_THREADPOOL_INDEX_SIZE} //${elasticdb.threadpool.index.size}
+  thread_pool.index.size: ${?ADA_ELASTIC_THREADPOOL_INDEX_SIZE}
   thread_pool.index.queue_size: 10000
-  thread_pool.bulk.size: ${?ADA_ELASTIC_THREADPOOL_BULK_SIZE} //${elasticdb.threadpool.bulk.size}
+  thread_pool.bulk.size: ${?ADA_ELASTIC_THREADPOOL_BULK_SIZE}
   thread_pool.bulk.queue_size: 1000
   scroll.batch.size: 10000
   scroll.doc_sort.use: true
-  text.analyzer: "standard"
+  index.fields.limit: 20000
+//  text.analyzer: "standard"
 }
