Custom data set menu configurable through 'setting' added with basic permission/visibility added. Closes #30. Closes #15.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -11,7 +11,7 @@
 # See http://www.playframework.com/documentation/latest/ApplicationSecret for more details.
 play.crypto.secret="9Bjt]9lSqPnfXPd5e;ign/wgsm[]R;`uGP<frI5^rhvJR:ZbJC_hr`Si=cMwutA2"
 
-app.version = 0.8.1.RC.3
+app.version = 0.8.1.RC.4
 
 # The application languages
 # ~~~~~
@@ -21,9 +21,9 @@ play.i18n.langs=["en"]
 # Modules
 
 play.modules.enabled += "play.modules.reactivemongo.ReactiveMongoModule"
-play.modules.enabled += "com.banda.network.business.NetworkModule"
 play.modules.enabled += "org.ada.server.dataaccess.RepoModule"
 play.modules.enabled += "org.ada.server.services.ServiceModule"
+play.modules.enabled += "com.bnd.network.business.NetworkModule"
 play.modules.enabled += "org.ada.web.controllers.ControllerModule"
 play.modules.enabled += "org.ada.web.security.AdaDeadboltModule"
 play.modules.enabled += "org.ada.web.controllers.FixRoutesPrefixUrl"
