--- a/conf/custom.conf
+++ b/conf/custom.conf
@@ -41,6 +41,6 @@ ldap {
 
 // EXTERNAL PATHS
 // - this will make listed folders (comma-delimited ) located in the Ada root folder acccessible for the asset lookup, which is handy especially for custom images/logos
-// - important: never set any of the folders to "/" since this would make all the classpath files, including common configuration files, accessible from outside as application assets. Example: https://localhost:8080/assets/application.conf)
+// - important: note that the folders you set are accessible from outside as application assets, hence set it wisely
 
 // assets.external_paths = ["/folder_in_classpath"]
