Bytesource runnable output supported

--- a/conf/custom.conf
+++ b/conf/custom.conf
@@ -41,6 +41,6 @@ ldap {
 
 // EXTERNAL PATHS
 // - this will make listed folders (comma-delimited ) located in the Ada root folder acccessible for the asset lookup, which is handy especially for custom images/logos
-// - important: note that the folders you set are accessible from outside as application assets, hence set it wisely
+// - important: note that the folders you choose will be accessible from outside as application assets, hence set those wisely
 
 // assets.external_paths = ["/folder_in_classpath"]
