--- a/conf/custom.conf
+++ b/conf/custom.conf
@@ -17,11 +17,11 @@ footer.logos = [
 // - if no LDAP is setup uncomment to the following
 // - important: this will allow to access Ada using loginAdmin and loginBasic URLs without authentication!! Don't use if your instance is accesssible from outside/the internet.
 
-ldap {
-  mode = "local"
-  port = "65505"
-  debugusers = true
-}
+//ldap {
+//  mode = "local"
+//  port = "65505"
+//  debugusers = true
+//}
 
 // - if you have a custom LDAP server you might need to set the following (values are provided as an example)
 // - note that the LDAP host and password are set in set_env.sh (see: ADA_LDAP_HOST, and ADA_LDAP_BIND_PASSWORD)
