--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 language: scala
+env:
+  - ADA_MONGO_DB_NAME=ada
+  - ADA_MONGO_DB_USERNAME=ci
+  - ADA_MONGO_DB_PASSWORD=ci
 scala:
    - 2.11.12
 jdk:
@@ -15,6 +19,8 @@ before_script:
   - cd ada-server
   - sbt publish-local
   - cd .. && rm -rf ada-server
+  # configure MongoDB
+  - mongo $ADA_MONGO_DB_NAME --eval 'db.createUser({user:$ADA_MONGO_DB_USERNAME, pwd:$ADA_MONGO_DB_PASSWORD , roles:["readWrite"]});'
 before_cache:
   # Cleanup the cached directories to avoid unnecessary cache updates
   - find $HOME/.ivy2/cache -name "ivydata-*.properties" -print -delete
