--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
 language: scala
 env:
-  - ADA_MONGO_DB_NAME=ada
-  - ADA_MONGO_DB_USERNAME=ci
-  - ADA_MONGO_DB_PASSWORD=ci
+  - ADA_MONGO_DB_NAME=ada ADA_MONGO_DB_USERNAME=ci ADA_MONGO_DB_PASSWORD=ci
 scala:
    - 2.11.12
 jdk:
