--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ before_script:
   # build ada-server dependency and publish locally
   - git clone https://github.com/ada-discovery/ada-server.git
   - cd ada-server
+  - git checkout ci-testing
   - sbt publish-local
   - cd .. && rm -rf ada-server
   # configure MongoDB
