--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ before_script:
   # configure MongoDB
   - mongo $ADA_MONGO_DB_NAME --eval "db.createUser({user:\"$ADA_MONGO_DB_USERNAME\", pwd:\"$ADA_MONGO_DB_PASSWORD\" , roles:[\"readWrite\"]});"
 script:
-  - sbt "test:testOnly *Spec"
+  - sbt -Dscala.concurrent.context.minThreads=10 -Dscala.concurrent.context.numThreads=10 -Dscala.concurrent.context.maxThreads=10 "test:testOnly *Spec"
 before_cache:
   # Cleanup the cached directories to avoid unnecessary cache updates
   - find $HOME/.ivy2/cache -name "ivydata-*.properties" -print -delete
