--- a/.travis.yml
+++ b/.travis.yml
@@ -6,15 +6,15 @@ scala:
 jdk:
   - openjdk8
 services:
+  - docker
   - mongodb
 addons:
   apt:
     packages:
       - git
+before_install:
+  - docker run -p 9200:9200 elasticsearch:5.6
 install:
-  # install elasticsearch
-  - curl -O https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-5.6.16.deb
-  - sudo dpkg -i --force-confnew elasticsearch-5.6.16.deb
   # build ada-server dependency and publish locally
   - git clone https://github.com/ada-discovery/ada-server.git
   - cd ada-server
@@ -22,7 +22,6 @@ install:
   - sbt publish-local
   - cd .. && rm -rf ada-server
 before_script:
-  - sudo service elasticsearch restart
   - mongo $ADA_MONGO_DB_NAME --eval "db.createUser({user:\"$ADA_MONGO_DB_USERNAME\", pwd:\"$ADA_MONGO_DB_PASSWORD\" , roles:[\"readWrite\"]});"
 script:
   - sbt "test:testOnly *Spec"
@@ -32,5 +31,3 @@ before_cache:
 cache:
   directories:
     - $HOME/.ivy2/cache
-after_script:
-  - sudo service elasticsearch stop
