--- a/conf/core/data-access.conf
+++ b/conf/core/data-access.conf
@@ -18,8 +18,8 @@ mongodb.username = ${?ADA_MONGO_DB_USERNAME}
 mongodb.password = "changeme"
 mongodb.password = ${?ADA_MONGO_DB_PASSWORD}
 
-# mongodb.uri ="mongodb://"${mongodb.host}"/"${mongodb.db}"?connectTimeoutMS=30000&socketTimeoutMS=30000&rm.keepAlive=true"
-mongodb.uri = "mongodb://"${mongodb.username}":"${mongodb.password}"@"${mongodb.host}"/"${mongodb.db}"?authMode=scram-sha1&rm.nbChannelsPerNode=20"
+mongodb.uri = "mongodb://"${mongodb.host}"/"${mongodb.db}
+//mongodb.uri = "mongodb://"${mongodb.username}":"${mongodb.password}"@"${mongodb.host}"/"${mongodb.db}"?authMode=scram-sha1&rm.nbChannelsPerNode=20"
 mongodb.uri = ${?ADA_MONGO_DB_URI}
 
 mongodb.connection.strictUri=true
