--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ addons:
     packages:
       - git
 before_install:
-  - docker run -p 27017:27017 mongo:4
+  - docker run -d -p 27017:27017 mongo:4
   - docker run -d -p 9200:9200 elasticsearch:5.6
 install:
   # build ada-server dependency and publish locally
