--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ addons:
     packages:
       - git
 before_install:
+  - docker load -i docker_images/images.tar || true
   - docker run -d -p 27017:27017 mongo:4
   - docker run -d -p 9200:9200 elasticsearch:5.6
 install:
@@ -22,8 +23,10 @@ install:
 script:
   - sbt "test:testOnly *Spec"
 before_cache:
+  - docker save -o docker_images/images.tar $(docker images -a -q)
   # Cleanup the cached directories to avoid unnecessary cache updates
   - find $HOME/.ivy2/cache -name "ivydata-*.properties" -print -delete
 cache:
   directories:
     - $HOME/.ivy2/cache
+    - docker_images
