added code coverage report

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ install:
   - cd .. && rm -rf ada-server
 script:
   - sbt "test:testOnly *Spec"
+  - sbt jacocoReport
 before_cache:
   - docker save -o docker_images/images.tar $(docker images -a -q)
   # Cleanup the cached directories to avoid unnecessary cache updates
