Sorted link two data set transformation - UI. Closes ada-discovery/ada-issues#149

--- a/conf/custom.conf
+++ b/conf/custom.conf
@@ -5,12 +5,12 @@
 
 project {
   name = "Ultimate"
-//  url = "https://ada-discovery.org"
+//  url = "https://ada-discovery.github.io"
 //  logo = "images/logos/ada_logo_v4.png"
 }
 
 footer.logos = [
-  {url: "https://ada-discovery.org", logo: "images/logos/ada_logo_v4.png", height: 60}
+  {url: "https://ada-discovery.github.io", logo: "images/logos/ada_logo_v4.png", height: 60}
 ]
 
 // LDAP SETTING
